--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -1,4 +1,5 @@
 .navbar{
+    min-width: 160px;
     width: 16%;
     background-color: white;
     margin-top: 0px;
@@ -18,6 +19,7 @@
     color: black;
 }
 .home,.alphabetical,.unique{
+    
     background-color: rgb(227, 241, 230);
     padding: 10px;
 }
@@ -39,6 +41,9 @@
     color: black;
     text-decoration: none;
   
+}
+.text-link h3{
+    font-size: 1em;
 }
 .activeNav{
     color: rgb(175, 7, 7);
