--- a/client/src/components/result/result.css
+++ b/client/src/components/result/result.css
@@ -14,17 +14,16 @@
     width: 520px;
     color: rgb(4, 150, 36);
     text-align: center;
-    font-size: 20px;
+    font-size: calc(30px + (20 - 12) * (100vw - 768px) / (1440 - 768));
     font-weight: bolder;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    font-size: 50px;
     font-weight: bolder;
 }
 .wpmspan{
-    font-size: 15px;
+    font-size: calc(12px + (19 - 12) * (100vw - 768px) / (1440 - 768));
     color: rgb(145, 144, 141);
 }
 .total{
@@ -36,7 +35,7 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    font-size: 25px;
+    font-size:calc(18px + (19 - 12) * (100vw - 768px) / (1440 - 768));
     box-shadow: 0px 10px 13px -12px #000000;
     background-color: rgb(243, 243, 243);
     margin-top: 10px;
@@ -46,7 +45,7 @@
     width: 520px;
     background-color: rgb(255, 255, 255);
     text-align: center;
-    font-size: 20px;
+    font-size:calc(12px + (19 - 12) * (100vw - 768px) / (1440 - 768));
     font-weight: bolder;
     display: flex;
     justify-content: space-around;
