--- a/client/src/pages/home.css
+++ b/client/src/pages/home.css
@@ -2,7 +2,8 @@
     display: flex;
     flex: 4;
     flex-direction: column;
-    width: 100%;
+
+  
     background-color: rgba(0, 195, 255, 0.1);
     align-items: center;
 }
@@ -10,7 +11,7 @@
     display: flex;
     flex-direction: column;
     height: 55%;
-    width: 90%;
+    width: 100%;
     align-items: center;
     font-family: 'Merriweather', serif;
 }
@@ -18,9 +19,10 @@
     display: flex;
     flex-direction: column;
     height: 16%;
-    width: 80%;
+    max-width: 75%;
+    width: 75%;
     background-color: white;
-    margin: 35px;
+    margin: 35px 0%;
     border-radius: 5px;
     padding: 20px 20px;
     border: 1px solid black;
@@ -30,21 +32,21 @@
     display: flex;
 }
 .singleWord{
-    font-size: 130%;
+    font-size: calc(12px + (20 - 12) * (100vw - 768px) / (1440 - 768));
     margin-left: 10px;
     padding: 2px;
 }
 .input_area{
     height: 48px;
-    width: 700px;
+    width: 70%;
     display: flex;
     justify-content: center;
 }
 .input{
-    height: 40px;
-    width: 500px;
+    height: 90%;
+    width: 60%;
     font-family: 'Merriweather', serif;
-    font-size: 130%;
+    font-size: calc(12px + (20 - 12) * (100vw - 768px) / (1440 - 768));
     border: 2px inset ;
     border-radius: 5px;
     outline: none;
@@ -58,9 +60,9 @@
     outline: none;
 }
 .button{
-    height: 48px;
-    width: 100px;
-    font-size: 20px;
+    height: 95%;
+    width: 13%;
+    font-size:calc(12px + (20 - 12) * (100vw - 768px) / (1440 - 768));
     font-weight: bolder;
     background-color: rgb(94, 190, 158);
     border: 1px solid rgb(94, 190, 158);
@@ -73,12 +75,12 @@
     background-color: rgb(82, 139, 134);
 }
 .timer{
-    height: 48px;
-    width: 100px;
+    height: 95%;
+    width: 10%;
     background-color: rgb(39, 46, 46);
     color: white;
     font-weight: bolder;
-    font-size: 20px;
+    font-size:calc(12px + (20 - 12) * (100vw - 768px) / (1440 - 768));
     border: 1px solid rgb(94, 190, 158);
     border-radius: 5px;
     text-align: center;
