--- a/client/src/pages/dashboard/dashboard.css
+++ b/client/src/pages/dashboard/dashboard.css
@@ -6,7 +6,7 @@
     flex-direction: column;
 }
 .title{
-    width: 700px;
+    max-width: 700px;
     height: 20px;
     margin-top: 1.5%;
     margin-left: 7%;
@@ -14,13 +14,16 @@
     font-weight: 600;
 }
 .tableContainer{
-    height: 400px;
-    width: 800px;
+    max-height: 500px;
+    max-width: 800px;
+    width: 80%;
     margin-top: .5%;
     margin-left: 7%;
+    overflow: hidden;
 }
 th, td{
-    width: 200px;
+    width: 10%;
+    max-width: 200px;
     padding: 1px 20px;
     text-align: left;
 }
