--- a/client/src/pages/login/login.css
+++ b/client/src/pages/login/login.css
@@ -7,8 +7,8 @@
     align-items: center;
 }
 .loginSection{
-    height: 50%;
-    width: 25%;
+    height: 55%;
+    width: 30%;
     background-color: rgb(240, 252, 255);
     display: flex;
     flex-direction: column;
@@ -24,7 +24,7 @@ input,  button{
     border: none;
 }
 .userinput, .passinput{
-    height: 10%;
+    height: 37px;
     font-family: 'Merriweather', serif;
     font-size: 15px;
     border: 2px inset ;
@@ -45,7 +45,7 @@ input,  button{
     margin-top: 20px;
 }
 .loginBtn{
-    height: 12%;
+    height: 40px;
     box-shadow: 4px 5px 9px -5px rgba(0,0,0,0.72);
     border-radius: 3px;
     outline: none;
