--- a/client/src/pages/register/register.css
+++ b/client/src/pages/register/register.css
@@ -11,7 +11,7 @@ small{
     font-weight: bold;
 }
 .registerSection{
-    height: 75%;
+    height: 77%;
     width: 30%;
     background-color: rgb(240, 252, 255);
     display: flex;
@@ -64,4 +64,6 @@ input,  button{
     text-align: center;
     margin-top: 5%;
     font-weight: 600;
+    display: flex;
+    flex-direction: column;
 }
